Thu Jan 19 12:30:18 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/VC71ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:

          Moved a static hash table out of a method and into the local
          namespace (for performace reasons).

        * modules/VC7WorkspaceCreator.pm:
        * templates/vc7csharp.mpd:
        * templates/vc7vb.mpd:

          Removed the code that added references for csharp or vb.  This was
          not necessary and in fact broke the projects.

        * modules/VC8ProjectCreator.pm:
        * templates/vc8csharp.mpd:
        * templates/vc8csharp.mpt:

          Added support for the vc8 style projects for csharp.  Previously,
          the vc7 version for csharp was used and required conversion within
          vc8.

Wed Jan 18 15:12:40 2006  Chad Elliott  <elliott_c@ociweb.com>

        * templates/nmake.mpd:

          Modified the clean rule to just use del /s/f/q instead of listing
          out each object file.  Thanks to Johnny Willemsen for debugging
          this.

Wed Jan 18 13:04:27 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/NMakeWorkspaceCreator.pm:
        * modules/TemplateParser.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/VC7WorkspaceCreator.pm:

          We need to keep track of the language for each project processed.
          This allows the VC7, VC71 and VC8 WorkspaceCreator's to put the
          right GUID in for the individual projects.

Tue Jan 17 07:25:29 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/FeatureParser.pm:

          The previous change included a change to make features
          case-insensitive.  This change was not complete and has been
          corrected.

Mon Jan 16 11:17:45 2006  Chad Elliott  <elliott_c@ociweb.com>

        * MPC.ico:

          Modified the MPC project icon to have the (P) on the left side
          instead of the right so that it looks better with Tortoise.

        * modules/Creator.pm: